--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,11 @@ body {
 
 
 }
+.sign-none {
+  display: none !important;
+  width: 0;
+  overflow: hidden;
+}
 #nav-l {
   font-weight: 700 !important;
 }
@@ -467,16 +472,36 @@ color: white;
 .nav-block {
   display: none;
 }
-.nav-item a{
+.get-btn0 {
+  color: #02897a !important;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+  /* font-family: 'Inter', sans-serif; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600 !important;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: left;
+  /* color: #22343d !important; */
+
+}
+.get-btn0:focus {
+  outline: none !important;
+  border: none !important;
+}
+.item1 a,.get-btn0{
 position: relative;
 
 }
-.nav-item a:hover {
+.item1 a:hover, .get-btn0:hover {
   color: white !important;
 z-index: 10;
+outline: none !important;
+  border: none !important;
 
 }
-.nav-item a:before {
+.item1 a:before,.get-btn0:before {
   content: " ";
   position: absolute !important;
   top: 0;
@@ -490,11 +515,11 @@ z-index: 10;
   transition: .5s;
   z-index: -1;
 }
-.nav-item a:hover:before {
+.item1 a:hover:before,.get-btn0:hover:before {
   transform: scaleY(1);
   opacity: 1;
 }
-.nav-item a:after {
+.item1 a:after,.get-btn0:after {
   content: " ";
   position: absolute;
   top: 1px;
@@ -510,7 +535,7 @@ z-index: 10;
   flex-direction: column !important;
 
 }
-.nav-item a:hover:after {
+.item1 a:hover:after, .get-btn0:hover:after {
   transform: scale(1);
 }
 @media screen and (max-width: 1200px){
@@ -563,6 +588,11 @@ z-index: 10;
    .btn-none {
      display: none !important;
    }
+   .sign-none {
+    display: block;
+    width: 100%;
+  overflow: hidden;
+  }
    .table-box {
     flex-direction: column;
     flex-wrap: wrap;
